#ifndef Beetle_H
#define Beetle_H
#include "Tile.h"

namespace hge {
    class Beetle : public Tile {
    public:
        Beetle();
    };
} // namespace hge



#endif