#ifndef Grass_Hopper_H
#define Grass_Hopper_H
#include "Tile.h"

namespace hge {
    class GrassHopper : public Tile {
    public:
        GrassHopper();
    };
} // namespace hge



#endif