#ifndef QUEEN_BEE_H
#define QUEEN_BEE_H
#include "Tile.h"

namespace hge {
    class QueenBee : public Tile {
    public:
        QueenBee();
    };
} 



#endif