#ifndef Spider_H
#define Spider_H
#include "Tile.h"

namespace hge {
    class Spider : public Tile {
    public:
        Spider();
    };
} 



#endif