@startuml
namespace hive {
    class Board {
        +map<Position, Tile> tiles
        +set<Position> emptyPositions
        +createEmptyTilesAroundBoard()
        +addTile(Position position, Tile tile)
        +removeTile(Position position)
        +isEmptyTile(Position position): bool
    }

    class Tile {
        +std::string type
        +bool placed
        +std::shared_ptr<Board> board
        +Position position
    }

    abstract class Piece extends Tile {
        +Piece(std::string type, std::shared_ptr<Board> board)
        +getAvailableMoves(): set<Position>
    }

    class Ant extends Piece {
        +getAvailableMoves(): set<Position>
    }

    class Beetle extends Piece {
        +getAvailableMoves(): set<Position>
    }

    class GrassHopper extends Piece {
        +getAvailableMoves(): set<Position>
    }

    class QueenBee extends Piece {
        +getAvailableMoves(): set<Position>
    }

    class Spider extends Piece {
        +getAvailableMoves(): set<Position>
    }

    class EmptyTile extends Tile {
        +EmptyTile()
    }

    class Player {
        +placeTile(Tile tile, Position position)
        +moveTile(Position from, Position to)
    }

    class Game {
        +start()
        +end()
        +reset()
    }

    Board "1..*" --> Tile
    Tile --> Board
    Player --> Board
    Player --> Tile
    Game --> Board
    Game --> Player
}
@enduml